--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,9 +101,9 @@ button:disabled {
   text-align: left;
 }
 
-.chat__sidebar ul {
+/* .chat__sidebar ul {
   list-style-type: none;
-}
+} */
 
 .chat__sidebar li {
   background: #e6eaee;
@@ -111,6 +111,7 @@ button:disabled {
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
+  list-style-type: none;
 }
 
 .chat__main {
